# hidden-retro-gems

./: .gitignore  README.md  README_SETUP.md  games.tsv  games.txt  no_brainers.tsv
backend/: .gitignore  ALTERNATIVE_APIS.md  AUTH_README.md  GAME_DATA_README.md  IMAGE_CACHE_SYSTEM.md  RAWG_API_SETUP.md  auth.py  clear_descriptions.py  copy_images.py  database.db  database.py  fetch_all_game_data.py  fetch_descriptions.py  fetch_no_brainers_games.py  game_data_service.py  main.py  pyproject.toml  reset_descriptions.py  run.py  start.sh  thegamesdb_service.py
backend/game_data/: descriptions.json  descriptions.json.backup  image_order.json  tags.json  trivial_games.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: About.tsx  AdminPanel.tsx  GameDetail.tsx  Games.tsx  Home.tsx  Login.tsx  ManufacturerDetail.tsx  ManufacturerPlatformGames.tsx  Manufacturers.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/utils/: slug.ts
